feat: add meta tags for SEO optimization in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,17 @@
     <meta charset="utf-8" />
     <title>Utilplex</title>
     <base href="/" />
+    <meta
+      name="keywords"
+      content="online tools, json formatter, sql formatter, base64 encoder, yaml converter, time zones, css formatter, javascript formatter"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Tim Dodd" />
+    <meta name="date" content="2025-04-22" scheme="YYYY-MM-DD" />
+    <meta
+      name="description"
+      content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
