feat: update page title for improved clarity and SEO

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Utilplex</title>
+    <title>UtilPlex | Free Online JSON Formatter, SQL Beautifier, YAML Converter</title>
     <base href="/" />
     <meta
       name="keywords"
