feat(formatters): add SCSS formatter with routing and metadata updates

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta
       name="keywords"
-      content="online tools, json formatter, sql formatter, base64 encoder, yaml converter, time zones, css formatter, javascript formatter"
+      content="online tools, json formatter, sql formatter, scss formatter, sass formatter, base64 encoder, yaml converter, time zones, css formatter, javascript formatter, code beautifier, developer tools"
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Tim Dodd" />
@@ -16,6 +16,18 @@
       content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="UtilPlex | Free Online JSON Formatter, SQL Beautifier, YAML Converter" />
+    <meta property="og:description" content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://utilplex.com" />
+    <meta property="og:site_name" content="UtilPlex" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="UtilPlex | Free Online JSON Formatter, SQL Beautifier, YAML Converter" />
+    <meta name="twitter:description" content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more." />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
