feat(diff): add file diff checker functionality with UI and service integration
- Implemented DiffService for comparing original and modified text.
- Created DiffViewComponent for displaying the diff results with editor support.
- Added HTML and SCSS for the diff view layout and styling.
- Introduced action buttons for pasting and clearing text in editors.
- Enhanced metadata in index.html for better SEO and structured data.
- Updated version number in sidebar to 2.2.
- Modified sitemap.xml with new last modified dates and added new diff page.
- Improved button styles in _buttons.scss for better user experience.

--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,56 @@
     <base href="/" />
     <meta
       name="keywords"
-      content="online tools, json formatter, sql formatter, scss formatter, sass formatter, base64 encoder, yaml converter, time zones, css formatter, javascript formatter, code beautifier, developer tools"
+      content="json formatter, json prettifier, json beautifier, json validator, sql formatter, sql beautifier, online json formatter, free json formatter, yaml converter, json to yaml, scss formatter, sass formatter, css formatter, css beautifier, javascript formatter, js beautifier, js prettifier, base64 encoder, base64 decoder, guid generator, uuid generator, lorem ipsum generator, time zone converter, world clock, file diff, text diff, code diff, file comparison, diff checker, developer tools, online code formatter, code beautifier, programming tools, web developer utilities, free online tools 2025"
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Tim Dodd" />
     <meta name="date" content="2025-04-22" scheme="YYYY-MM-DD" />
     <meta
       name="description"
-      content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more."
+      content="Free online developer tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, Base64 encoding/decoding, GUID generation, file comparison, and time zone conversion. Fast, secure, and no registration required."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="canonical" href="https://utilplex.com" />
+    
+    <!-- JSON-LD Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "UtilPlex",
+      "description": "Free online developer tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, Base64 encoding/decoding, GUID generation, file comparison, and time zone conversion",
+      "url": "https://utilplex.com",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Any",
+      "browserRequirements": "Requires JavaScript. Requires HTML5.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "featureList": [
+        "JSON Formatter and Validator",
+        "SQL Query Formatter", 
+        "CSS/SCSS Formatter",
+        "JavaScript Beautifier",
+        "JSON to YAML Converter",
+        "Base64 Encoder/Decoder",
+        "GUID/UUID Generator",
+        "Lorem Ipsum Generator",
+        "Time Zone Converter",
+        "File Diff Checker"
+      ],
+      "author": {
+        "@type": "Person",
+        "name": "Tim Dodd"
+      }
+    }
+    </script>
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="UtilPlex | Free Online JSON Formatter, SQL Beautifier, YAML Converter" />
-    <meta property="og:description" content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more." />
+    <meta property="og:description" content="Free online developer tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, Base64 encoding/decoding, GUID generation, file comparison, and time zone conversion. Fast, secure, and no registration required." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://utilplex.com" />
     <meta property="og:site_name" content="UtilPlex" />
@@ -27,7 +63,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="UtilPlex | Free Online JSON Formatter, SQL Beautifier, YAML Converter" />
-    <meta name="twitter:description" content="UtilPlex offers fast, no-fuss online tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, and more." />
+    <meta name="twitter:description" content="Free online developer tools for formatting JSON, SQL, CSS, JavaScript, converting JSON to YAML, Base64 encoding/decoding, GUID generation, file comparison, and time zone conversion. Fast, secure, and no registration required." />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
